# langdag

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build_result_test.go  deployment_aware_public_integration_test.go  docker-compose.test.yml  go.mod  go.sum  langdag.go  langdag_test.go
.githooks/: pre-commit
.github/workflows/: model-catalog.yml  pages.yml  release.yml  test-go.yml  test-python.yml  test-typescript.yml  test.yml
api/: openapi.yaml
cmd/langdag/: main.go
docs/: CNAME  DESIGN.md  Gemfile  _config.yml  api.md  cli.md  design-overview.md  getting-started.md  index.html  index.md  llms-full.txt  llms.txt  model-catalog.md  robots.txt  sitemap.xml  workflows.md
docs/_includes/: terminal-demo.html
docs/assets/: demo.md
examples/: summarizer.yaml
examples/go/: README.md  go.mod  main.go
examples/python/: README.md  example.py  requirements.txt
examples/typescript/: README.md  example.ts  package.json  tsconfig.json
internal/api/: api_test.go  chat.go  dags.go  openapi_contract_test.go  server.go  workflows.go
internal/cli/: chat.go  chat_test.go  config.go  dag.go  import.go  models.go  output.go  root.go  serve.go  workflow.go
internal/config/: config.go  config_test.go
internal/conversation/: conversation.go  (+4 more)
plans/: api-sdks-website-2026-02-04.md  fallback-providers-ab-testing-2026-03-04.md  mock-llm-testing-2026-02-04.md  multi-provider-compatibility-2026-03-04.md  sdk-simplification-2026-02-09.md  sdk-test-strengthening-2026-02-12.md
scripts/: check-model-catalog.sh  sync-model-catalog.sh  test-e2e-errors.sh  test-e2e.sh
sdks/: SSE_FORMAT.md
sdks/python/: README.md  pyproject.toml
sdks/python/langdag/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_async_client.py  test_client.py  test_cross_sdk.py  test_e2e.py  test_graceful_degradation.py
tools/langgraph-export/: README.md  pyproject.toml
tools/langgraph-export/langgraph_export/: __init__.py  cli.py  exporter.py  types.py
tools/langgraph-export/langgraph_export/backends/: __init__.py  memory.py  postgres.py  sqlite.py
tools/langgraph-export/tests/: conftest.py  test_langgraph_to_langdag.py  test_memory_migration.py  test_sqlite_migration.py
types/: deployment_aware_metadata_test.go  types.go  types_test.go
(+114 files in other folders)
